clusters/cluster/flux-system/github-webhook-receiver.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook-receiver
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - flux-webhook.neuland.ing
    secretName: flux-system-webhook-tls
  rules:
  - host: flux-webhook.neuland.ing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
